--- a/Pantry/Base.lproj/Main.storyboard
+++ b/Pantry/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8121.20" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="77b-fm-MGI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="77b-fm-MGI">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.16"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
         <!--Pentry-->
         <scene sceneID="PKx-gf-4Yh">
             <objects>
-                <viewController id="FNc-1z-0AW" customClass="Pentry" customModule="Pantry" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Pentry" id="FNc-1z-0AW" customClass="Pentry" customModule="Pantry" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="IFq-rr-SAA"/>
                         <viewControllerLayoutGuide type="bottom" id="d8p-Mg-1tT"/>
@@ -60,10 +60,10 @@
             </objects>
             <point key="canvasLocation" x="-16" y="1157"/>
         </scene>
-        <!--Scan-->
+        <!--BarCodeScanner-->
         <scene sceneID="Ure-Fv-jHp">
             <objects>
-                <viewController id="nnV-8S-cKh" sceneMemberID="viewController">
+                <viewController title="BarCodeScanner" id="nnV-8S-cKh" customClass="BarCodeScanner" customModule="Pantry" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Cd1-pW-MIV"/>
                         <viewControllerLayoutGuide type="bottom" id="Vs7-k6-XLR"/>
@@ -82,7 +82,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="8kf-yl-bHc">
             <objects>
-                <tabBarController id="77b-fm-MGI" sceneMemberID="viewController">
+                <tabBarController id="77b-fm-MGI" customClass="TabBarController" customModule="Pantry" customModuleProvider="target" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="M1X-xx-6yF">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
